<resources>
    <string name="app_name">CapStoreFinal</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_recover_password">Восстановить пароль</string>
    <string name="text_phone_number_blank">+ 996 788 999 555</string>
    <string name="text_reset_password_note">Введите номер, указанный при регистрации. Вам будет отправлен код подтверждения</string>
    <string name="text_reset_password_send">Отправить</string>
    <string name="text_reset_password_note_2">Введите 6 значный код, отправленный на номер</string>
    <string name="cart">Корзина</string>
    <string name="sum">Сумма</string>
    <string name="delivery">Доставка</string>
    <string name="buy">Купить</string>
    <string name="popular_types">Популярные Брэнды</string>
    <string name="new_era">New Era</string>
    <string name="adidas">Adidas</string>
    <string name="nike">Nike</string>
    <string name="vans">Vans</string>
    <string name="bestsellers">Бестселлеры</string>
    <string name="see_all">Смотреть все</string>
    <string name="stocks">Акции</string>
    <string name="favourites">Избранное</string>
    <string name="register">Регистрация</string>
    <string name="name">Имя</string>
    <string name="phone_number">Номер телефона</string>
    <string name="password">Пароль</string>
    <string name="confirm_the_password">Подтвердить пароль</string>
    <string name="do_you_have_account">Уже есть аккаунт?</string>
    <string name="log_in">Войти</string>
    <string name="or">или</string>
    <string name="sort">Сортировка</string>
    <string name="popular">Популярные</string>
    <string name="new_products">Новинки</string>
    <string name="cheap_ones_first">Сначала дешевые</string>
    <string name="expensive_first">Сначала дорогие</string>
    <string name="apply">Применить</string>
    <string name="facebook_app_id">769300090922219</string>
    <string name="fb_login_protocol_scheme">fb769300090922219</string>
    <string name="facebook_client_token">30e4a068a013ff373d87e686efa6a4e6</string>
    <string name="all">Все</string>
    <string name="supreme_amp_new_era"><![CDATA[Supreme & new era]]></string>
    <string name="collabaration">collabaration</string>
    <string name="profile">Профиль</string>
    <string name="sergan">Sergan</string>
    <string name="sergan_mail_ru">sergan@mail.ru</string>
    <string name="_996755999820">+996755999820</string>
    <string name="address">Адрес</string>
    <string name="edit_profile">Редактировать профиль</string>
    <string name="my_account">Мой аккаунт</string>
    <string name="my_charge">Мои заказы</string>
    <string name="cap_shop">Магазин кепок</string>
    <string name="custom_caps">Custom Caps</string>
    <string name="not_registered">Еще не заригестрированы?</string>
    <string name="forget_password">Забыли пароль?</string>
    <string name="registration">Регистрация</string>
    <string name="repare">Восстановить</string>
    <string name="reset_password">Восстановить пароль</string>
    <string name="enter_new_password">Введите новый пароль</string>
    <string name="confirm_the_new_password">Подтвердите новый пароль</string>
    <string name="description">Golden State Warriors \nIcon 59FIFTY Fitted Cap</string>
    <string name="_2500">2500</string>
    <string name="size">size</string>
    <string name="add">Добавить</string>
    <string name="same_product">Похожие товары</string>
    <string name="full_description">Кепка Golden State Warriors Icon 59FIFTY Fitted Cap имеет вышитый логотип Warriors на передних панелях, а также надпись World Champs с дополнительными командными нашивками и вышивкой по всей остальной части короны. Дополнительные детали включают цветной логотип NBA команды сзади и серый нижний слой.</string>
    <string name="xl">xl</string>
    <string name="l">l</string>
    <string name="m">m</string>
    <string name="s">s</string>
</resources>