<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".DetailFragment">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_back_cap"
            android:layout_width="match_parent"
            android:layout_height="360dp"
            android:background="@color/black"
            android:orientation="vertical"
            android:weightSum="100"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:context=".MainActivity">
        </androidx.appcompat.widget.AppCompatImageView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:cardCornerRadius="30dp"
            app:layout_constraintTop_toBottomOf="@id/iv_back_cap">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="15dp"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/tv_company_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:text="@string/new_era"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tv_series_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/cost_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_margin="15dp"
                    android:text="@string/_2500"
                    android:textColor="@color/custom_yellow"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/size"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="15dp"
                    android:orientation="horizontal">

                    <Button
                        style="@style/TextProductSize"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:text="@string/s" />

                    <Button
                        style="@style/TextProductSize"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginHorizontal="20dp"
                        android:text="@string/m" />

                    <Button
                        style="@style/TextProductSize"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:text="@string/l" />

                    <Button
                        style="@style/TextProductSize"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginHorizontal="20dp"
                        android:text="@string/xl" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tv_full_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/full_description"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="15dp"
                    android:text="@string/same_product"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/similar_recycler"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/item_3_discount" />


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/add_btn"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginHorizontal="50dp"
                    android:layout_marginVertical="15dp"
                    android:backgroundTint="#FDDB16"
                    android:text="@string/add"
                    app:cornerRadius="60dp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>