<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_bottom_sheet_corners"
    tools:context=".presentation.ui.see.SortFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/twenty_eight_and_half"
        android:layout_marginTop="@dimen/ll_margin_top"
        android:layout_marginBottom="@dimen/ll_margin_top"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/iv_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_close_24"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/sf_ui_text_heavy"
                android:gravity="center_horizontal"
                android:text="@string/sort"
                android:textColor="@color/black"
                android:textSize="@dimen/size_medium" />
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/appbar_padding_top"
            android:layout_marginTop="@dimen/edit_text_height"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_popular"
                style="@style/BtnSortStyle"
                android:text="@string/popular"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_new"
                style="@style/BtnSortStyle"
                android:text="@string/new_products"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_cheap"
                style="@style/BtnSortStyle"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:text="@string/cheap_ones_first"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_popular" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_expensive"
                style="@style/BtnSortStyle"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:text="@string/expensive_first"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_new" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_width="@dimen/btn_sort_width"
            android:layout_height="@dimen/edit_text_height"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/corner_radius"
            android:backgroundTint="@color/custom_yellow"
            android:fontFamily="@font/sf_ui_text_bold"
            android:insetTop="@dimen/zero_dp"
            android:insetBottom="@dimen/zero_dp"
            android:text="@string/apply"
            android:textAllCaps="false"
            android:textSize="@dimen/size_medium"
            app:cornerRadius="@dimen/corner_radius" />
    </LinearLayout>
</FrameLayout>