<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="30dp"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/logo_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center_horizontal"
        android:layout_marginTop="40dp"
        android:src="@drawable/custom_cap_app"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/login_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/log_in"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:background="@color/gray" />

    <LinearLayout
        android:id="@+id/regis_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/number_ev"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:hint="@string/phone_number"
            android:inputType="phone"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/password_ev"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            tools:ignore="Autofill" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:text="@string/not_registered"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forget_password"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/register_tv"
                android:layout_width="96dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:text="@string/registration"
                android:textColor="#2566AF"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/restore_tv"
                android:layout_width="96dp"
                android:layout_height="wrap_content"
                android:text="@string/repare"
                android:textColor="#2566AF"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_btn"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="80dp"
        android:backgroundTint="@color/white"
        android:hint="@string/log_in"
        android:outlineProvider="bounds"
        android:stateListAnimator="@null"
        android:textSize="16sp"
        app:cornerRadius="60dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/tvText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/or"
            android:textColor="@color/black" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:layout_toStartOf="@id/tvText"
            android:background="@color/black" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_centerVertical="true"
            android:layout_marginEnd="16dp"
            android:layout_toEndOf="@id/tvText"
            android:background="@color/black" />

    </RelativeLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/facebook_btn"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginEnd="50dp"
            android:src="@drawable/logo_facebook"
            tools:ignore="ContentDescription" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/google_btn"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:src="@drawable/logo_google"
            tools:ignore="ContentDescription" />
    </LinearLayout>
</LinearLayout>