<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/my_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="30dp"
        android:text="@string/my_account"
        android:textColor="@color/black"
        android:textSize="@dimen/size_biggest_28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_profile"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="48dp"
        android:src="@drawable/yellow_message"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_account" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_order"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="18dp"
        android:src="@drawable/yellow_bag"
        app:layout_constraintBottom_toBottomOf="@+id/my_order"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_profile" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_address"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="18dp"
        android:src="@drawable/yellow_location"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_order" />

    <TextView
        android:id="@+id/profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:layout_marginTop="48dp"
        android:gravity="center_vertical"
        android:text="@string/profile"
        app:layout_constraintTop_toBottomOf="@+id/my_account" />

    <TextView
        android:id="@+id/my_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:layout_marginTop="20dp"
        android:text="@string/my_charge"
        app:layout_constraintTop_toBottomOf="@+id/profile"
        tools:layout_editor_absoluteX="65dp" />

    <TextView
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:layout_marginTop="20dp"
        android:text="@string/address"
        app:layout_constraintTop_toBottomOf="@+id/my_order" />

</androidx.constraintlayout.widget.ConstraintLayout>