<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FCDC31">


    <ImageView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="60dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:backgroundTint="@color/white"
            android:hint="@string/log_in"
            android:textColorHint="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:cornerRadius="60dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/register_btn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:backgroundTint="#1212138A"
            android:hint="@string/register"
            android:textColorHint="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:cornerRadius="60dp"
            tools:ignore="TextContrastCheck" />


    </LinearLayout>


    <ImageView
        android:id="@+id/logo_iv"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/custom_cap_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo_iv">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/custom_caps"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cap_shop"
            android:textColor="@color/white"
            android:textSize="18sp"
            tools:ignore="TextContrastCheck" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>